--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
         "scripts": ["background.js"],
         "persistent": false
     },
-    "page_action": {
+    "permissions": ["activeTab", "storage"],
+    "options_page": "config/config.html",
+    "browser_action": {
         "default_popup": "picture-in-picture.html",
         "default_icon": {
             "16": "images/icons/pip-16.png",
