--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,9 @@
         "scripts": ["background.js"],
         "persistent": false
     },
-    "permissions": ["activeTab", "storage"],
+    "permissions": ["activeTab", "storage", "tabs", "system.display"],
     "options_page": "config/config.html",
     "browser_action": {
-        "default_popup": "picture-in-picture.html",
         "default_icon": {
             "16": "images/icons/pip-16.png",
             "32": "images/icons/pip-32.png",
