--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,10 @@
         "persistent": false
     },
     "permissions": ["activeTab", "storage", "tabs", "system.display"],
-    "options_page": "config/config.html",
+    "options_ui": {
+        "page": "config/config.html",
+        "chrome_style": true
+    },
     "browser_action": {
         "default_icon": {
             "16": "images/icons/pip-16.png",
